--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,8 +1,5 @@
 
 .App {
-    --custom-font: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
     display: grid;
     grid-template-areas: "sidebar header" "sidebar main";
     grid-template-columns: 1fr 2.3fr;
@@ -11,7 +8,7 @@
   }
   
   .App__nav {
-    background-color: #0b1b32;
+    background-color: #A3C3D9;
     color: #fff;
     grid-area: sidebar;
     height: 100vh;
@@ -19,21 +16,20 @@
   }
   
   .App__header {
-    background-color: #0b1f3a;
-    color: #bdbdbd;
+    background-color: #CCD6EB;
+    color: #993955;
     font-family: var(--custom-font);
     grid-area: header;
     padding-left: 16px;
     padding-top: 32px;
-    text-shadow: 2px 1px 2px black;
   }
   
   .App__header a {
-    color: #bdbdbd;
+    color: #993955;
   }
   
   .App__main {
-    background-color: #102541;
+    background-color: #E9ECF541;
     grid-area: main;
     height: calc(100vh - 120px);
     overflow: auto;
